# dd-tiktok-uploader

./: .gitignore  CLAUDE.md  README.md  batch_generate.py  beatsync.py  db.py  fetch_tracks.py  generate_niche.py  links.txt  plan.example.toml  pyproject.toml  requirements.txt  serve.py  tiktok_auth.py  tiktokbdaqzsDXqL39nWW48Nh0AfYYOotl1q3H.txt  webui.py
deploy/: RUNBOOK.md  _backup_db.py  backup.ps1  cloudflared-config.example.yml  harden-boot.ps1  install.ps1  register-lmstudio-watchdog.ps1  restart-usine.ps1  setup-ssh.ps1  start-lmstudio.bat  start-usine.bat  update.ps1  watchdog-lmstudio.ps1
docs/: DEPLOYMENT-TOWER.md  DEPLOYMENT.md  RECETTE.md  ROADMAP.md  SSH-ACCESS.md  TUTO-SSH-TOUR.md
docs/superpowers/plans/: 2026-07-08-plateforme-phase1.md  2026-07-16-acces-public-cloudflare.md  2026-07-16-presets-ambiance-fonts.md  2026-07-17-presets-ambiance-leviers.md  2026-07-20-moment-calme-preset.md
docs/superpowers/specs/: 2026-07-03-beatsync-design.md  2026-07-04-beatsync-v2-dynamique-design.md  (+8 more)
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
templates/: index.html
tests/: test_auth.py  test_backup_db.py  test_batch.py  test_beatsync_ambiance.py  test_build_edl.py  test_build_edl_v2.py  test_chrono.py  test_db.py  test_fetch_tracks.py  test_find_calm.py  test_find_drop.py  test_framing.py  test_generate_niche.py  test_phrase_end.py  test_scan.py  test_scan_cache.py  test_subtitles.py  test_webui_auth.py  test_webui_deploy.py  test_webui_platform.py  test_webui_pure.py
(+16 files in other folders)
