[project]
name = "dd-tiktok-uploader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "librosa>=0.11.0",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.10,<5",
    "yt-dlp>=2026.6.9",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
